Variables for passed projection init render, and html DOM manipulation logic

--- a/Projection Tool/css/style.css
+++ b/Projection Tool/css/style.css
@@ -1,1 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Thasadith');
+
+.testText{
+  color:red;
+  position: absolute;
+}
+
+#projVis{
+  position: relative;
+}
+
+#container {
+  position: relative;
+}
+#container canvas, #overlay {
+  position: absolute;
+}
